@@ -176,6 +176,13 @@ public:
     void Sort(int (*cmpFunc)(const void *a, const void *b)) {
         qsort(els, len, sizeof(T), cmpFunc);
     }
+
+    Vec<T> *Clone() const {
+        Vec<T> *clone = new Vec<T>(len);
+        for (size_t i = 0; i < len; i++)
+            clone->Append(At(i));
+        return clone;
+    }
 };
 
 // only suitable for T that are pointers that were malloc()ed
