@@ -31,8 +31,26 @@ etc...
     quits.
 */
 
+// number of most recently used files that will be shown in the menu
+// (and remembered in the preferences file, if just filenames are
+//  to be remembered and not individual view settings per document)
+#define FILE_HISTORY_MAX_RECENT     10
+
+// maximum number of most frequently used files that will be shown on the
+// Frequent Read list (space permitting)
+#define FILE_HISTORY_MAX_FREQUENT   10
+
 class FileHistory {
     Vec<DisplayState *> states;
+
+    // sorts the most often used files first
+    static int cmpOpenCount(const void *a, const void *b) {
+        DisplayState *dsA = *(DisplayState **)a;
+        DisplayState *dsB = *(DisplayState **)b;
+        if (dsA->openCount != dsB->openCount)
+            return dsB->openCount - dsA->openCount;
+        return Str::CmpNatural(dsA->filePath, dsB->filePath);
+    }
 
 public:
     FileHistory() { }
@@ -94,6 +112,15 @@ public:
             Append(state);
             other.Remove(state);
         }
+    }
+
+    // returns a shallow copy of the file history list, sorted
+    // by open frequency instead of recency
+    // caller needs to delete the result (but not the contained states)
+    Vec<DisplayState *> *GetFrequencyOrder() {
+        Vec<DisplayState *> *list = states.Clone();
+        list->Sort(cmpOpenCount);
+        return list;
     }
 };
 
